include/Iedk.h

    
    typedef enum IEE_FacialExpressionThreshold_enum {
        FE_SENSITIVITY  
    } IEE_FacialExpressionThreshold_t;
    typedef enum IEE_FacialExpressionTrainingControl_enum {
        FE_NONE = 0,    
        FE_START,       
        FE_ACCEPT,      
        FE_REJECT,      
        FE_ERASE,       
        FE_RESET        
    } IEE_FacialExpressionTrainingControl_t;
    typedef enum IEE_FacialExpressionSignature_enum {
        FE_SIG_UNIVERSAL = 0,   
        FE_SIG_TRAINED          
    } IEE_FacialExpressionSignature_t;
    typedef enum IEE_MentalCommandTrainingControl_enum {
        MC_NONE = 0,    
        MC_START,       
        MC_ACCEPT,      
        MC_REJECT,      
        MC_ERASE,       
        MC_RESET        
    } IEE_MentalCommandTrainingControl_t;
    typedef void* EmoEngineEventHandle;
    typedef struct IInputSensorDescriptor_struct {
        IEE_InputChannels_t channelId;  
        int                 fExists;    
        const char*         pszLabel;   
        double              xLoc;       
        double              yLoc;       
        double              zLoc;       
    } IInputSensorDescriptor_t;
    EDK_API int
        IEE_EngineClearEventQueue(int eventTypes);
    EDK_API int
        IEE_EngineGetNumUser(unsigned int* pNumUserOut);
    EDK_API int
        IEE_SetHardwarePlayerDisplay(unsigned int userId,
                                     unsigned int playerNum);
    EDK_API int
        IEE_SetUserProfile(unsigned int userId,
                           const unsigned char profileBuffer[],
                           unsigned int length);
    EDK_API int
        IEE_GetUserProfile(unsigned int userId,
                           EmoEngineEventHandle hEvent);
    EDK_API int
        IEE_GetBaseProfile(EmoEngineEventHandle hEvent);
    EDK_API int
        IEE_GetUserProfileSize(EmoEngineEventHandle hEvt,
                               unsigned int* pProfileSizeOut);
    EDK_API int
        IEE_GetUserProfileBytes(EmoEngineEventHandle hEvt,
                                unsigned char destBuffer[],
                                unsigned int length);
    EDK_API int
        IEE_LoadUserProfile(unsigned int userID,
                            const char* szInputFilename);
    EDK_API int
        IEE_SaveUserProfile(unsigned int userID,
                            const char* szOutputFilename);
    EDK_API int
        IEE_FacialExpressionSetThreshold(unsigned int userId,
                                         IEE_FacialExpressionAlgo_t algoName,
                                         IEE_FacialExpressionThreshold_t thresholdName,
                                         int value);
    EDK_API int
        IEE_FacialExpressionGetThreshold(unsigned int userId,
                                         IEE_FacialExpressionAlgo_t algoName,
                                         IEE_FacialExpressionThreshold_t thresholdName,
                                         int *pValueOut);
    EDK_API int 
        IEE_FacialExpressionSetTrainingAction(unsigned int userId,
                                              IEE_FacialExpressionAlgo_t action);
    EDK_API int 
        IEE_FacialExpressionSetTrainingControl(unsigned int userId,
                                               IEE_FacialExpressionTrainingControl_t control);
    EDK_API int 
        IEE_FacialExpressionGetTrainingAction(unsigned int userId,
                                              IEE_FacialExpressionAlgo_t* pActionOut);
    EDK_API int 
        IEE_FacialExpressionGetTrainingTime(unsigned int userId,
                                            unsigned int* pTrainingTimeOut);
    EDK_API int
        IEE_FacialExpressionGetTrainedSignatureActions(unsigned int userId,
                                                       unsigned long* pTrainedActionsOut);
    EDK_API int
        IEE_FacialExpressionGetTrainedSignatureAvailable(unsigned int userId,
                                                         int* pfAvailableOut);
    EDK_API int 
        IEE_FacialExpressionSetSignatureType(unsigned int userId,
                                             IEE_FacialExpressionSignature_t sigType);
    EDK_API int 
        IEE_FacialExpressionGetSignatureType(unsigned int userId,
                                             IEE_FacialExpressionSignature_t* pSigTypeOut);
    EDK_API int
        IEE_MentalCommandSetActiveActions(unsigned int userId,
                                          unsigned long activeActions);
    EDK_API int
        IEE_MentalCommandGetActiveActions(unsigned int userId,
                                          unsigned long* pActiveActionsOut);
    EDK_API int 
        IEE_MentalCommandGetTrainingTime(unsigned int userId,
                                         unsigned int* pTrainingTimeOut);
    EDK_API int 
        IEE_MentalCommandSetTrainingControl(unsigned int userId,
                                            IEE_MentalCommandTrainingControl_t control);
    EDK_API int 
        IEE_MentalCommandSetTrainingAction(unsigned int userId,
                                           IEE_MentalCommandAction_t action);
    EDK_API int 
        IEE_MentalCommandGetTrainingAction(unsigned int userId,
                                           IEE_MentalCommandAction_t* pActionOut);
    EDK_API int
        IEE_MentalCommandGetTrainedSignatureActions(unsigned int userId,
                                                    unsigned long* pTrainedActionsOut);
    EDK_API int
        IEE_MentalCommandGetOverallSkillRating(unsigned int userId,
                                               float* pOverallSkillRatingOut);
    EDK_API int
        IEE_MentalCommandGetActionSkillRating(unsigned int userId,
                                              IEE_MentalCommandAction_t action,
                                              float* pActionSkillRatingOut);
    EDK_API int 
        IEE_MentalCommandSetActivationLevel(unsigned int userId,
                                            int level);
    EDK_API int 
        IEE_MentalCommandSetActionSensitivity(unsigned int userId,
                                              int action1Sensitivity,
                                              int action2Sensitivity,
                                              int action3Sensitivity,
                                              int action4Sensitivity);
    EDK_API int 
        IEE_MentalCommandGetActivationLevel(unsigned int userId,
                                            int *pLevelOut);
    EDK_API int 
        IEE_MentalCommandGetActionSensitivity(unsigned int userId,
                                              int* pAction1SensitivityOut,
                                              int* pAction2SensitivityOut,
                                              int* pAction3SensitivityOut,
                                              int* pAction4SensitivityOut);
    EDK_API int
        IEE_MentalCommandStartSamplingNeutral(unsigned int userId);
    EDK_API int
        IEE_MentalCommandStopSamplingNeutral(unsigned int userId);
    EDK_API int
        IEE_MentalCommandSetSignatureCaching(unsigned int userId,
                                             unsigned int enabled);
    EDK_API int
        IEE_MentalCommandGetSignatureCaching(unsigned int userId,
                                             unsigned int* pEnabledOut);
    EDK_API int
        IEE_MentalCommandSetSignatureCacheSize(unsigned int userId,
                                               unsigned int size);
    EDK_API int
        IEE_MentalCommandGetSignatureCacheSize(unsigned int userId,
                                               unsigned int* pSizeOut);
    EDK_API int
        IEE_HeadsetGetSensorDetails(IEE_InputChannels_t channelId,
                                    IInputSensorDescriptor_t* pDescriptorOut);
    EDK_API int
        IEE_HardwareGetVersion(unsigned int userId,
                               unsigned long* pHwVersionOut);
    EDK_API int
        IEE_SoftwareGetVersion(char* pszVersionOut,
                               unsigned int nVersionChars,
                               unsigned long* pBuildNumOut);
    EDK_API int
        IEE_HeadsetGetGyroDelta(unsigned int userId,
                                int* pXOut,
                                int* pYOut);
    EDK_API int
        IEE_HeadsetGyroRezero(unsigned int userId);