lib/mac/Framework/edk.framework/Versions/3/Headers/IEmoStateDLL.h

    
    typedef enum IEE_FacialExpressionAlgo_enum {
        FE_NEUTRAL    = 0x0001,
        FE_BLINK      = 0x0002,
        FE_WINK_LEFT  = 0x0004,
        FE_WINK_RIGHT = 0x0008,
        FE_HORIEYE    = 0x0010,
        FE_SURPRISE   = 0x0020,
        FE_FROWN      = 0x0040,
        FE_SMILE      = 0x0080,
        FE_CLENCH     = 0x0100,
    } IEE_FacialExpressionAlgo_t;
    typedef enum IEE_MentalCommandAction_enum {
        MC_NEUTRAL                  = 0x0001,
        MC_PUSH                     = 0x0002,
        MC_PULL                     = 0x0004,
        MC_LIFT                     = 0x0008,
        MC_DROP                     = 0x0010,
        MC_LEFT                     = 0x0020,
        MC_RIGHT                    = 0x0040,
        MC_ROTATE_LEFT              = 0x0080,
        MC_ROTATE_RIGHT             = 0x0100,
        MC_ROTATE_CLOCKWISE         = 0x0200,
        MC_ROTATE_COUNTER_CLOCKWISE = 0x0400,
        MC_ROTATE_FORWARDS          = 0x0800,
        MC_ROTATE_REVERSE           = 0x1000,
        MC_DISAPPEAR                = 0x2000
    } IEE_MentalCommandAction_t;
    typedef enum IEE_InputChannels_enum {
        IEE_CHAN_CMS = 0,
        IEE_CHAN_DRL = 0,
        IEE_CHAN_AF3 = 3,
        IEE_CHAN_T7  = 7,
        IEE_CHAN_Pz  = 9,
        IEE_CHAN_T8  = 12,
        IEE_CHAN_AF4 = 16
    } IEE_InputChannels_t;